<resources>
    <string name="app_name">SecureBiker</string>
    <string name="title_activity_main">SecureBiker</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="content_map_textview_text">Distance to Danger</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="KEY_SYNC_FREQUENZ">sync_frequency</string>
    <string name="pref_sync_summary"> </string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_message_notifications">Enable notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_vibrate_on">On</string>
    <string name="pref_vibrate_off">Off</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_map">Map</string>

    <!-- Strings for Alarmtimer-->
    <string name="pref_title_alarm_timer">Alarmtimer</string>

    <string-array name="pref_alarm_timer">
        <item>3 seconds</item>
        <item>6 seconds</item>
        <item>10 seconds</item>
    </string-array>

    <string-array name="pref_alarm_timer_values">
        <item>3</item>
        <item>6</item>
        <item>10</item>
    </string-array>

    <!-- Strings for AlarmSwitch-->
    <string name="pref_title_alarmswitch">Turn Alarm On/Off</string>

    <!-- Einstellungen für Geofences -->
    <string name="pref_header_geofences">Geonfecnes behavior</string>
    <string name="pref_geofence_summary"></string>
    
    <!-- Strings für die Einträge in der Sidebar
    -->
    <string name="activity_map_drawer_sound">Sound</string>
    <string name="activity_map_drawer_vibration">Vibration</string>
    <string name="activity_map_drawer_visual">Visual</string>
    <string name="activity_map_drawer_tools">Tools</string>
    <string name="activity_map_drawer_title_section2">Communicate</string>
    <string name="activity_map_drawer_share">Share</string>
    <string name="activity_map_drawer_send">Send</string>

    <string name="nav_header_map_headline">SecureBiker</string>
    <string name="nav_header_map_subtitle">Settings</string>

    <!-- Strings für Messages -->
    <string name="No_Location_Available">No Location available</string>
    <string name="Title_AlarmDialogFragment">Attention</string>
    <string name="Message_AlarmDialogFragment">Danger ahead</string>
    <string name="Button_AlarmDialogFragment">OK</string>

    <!-- Strings für Settings-Activity -->
    <string name="activity_settings_textview_text">Radius of Fences</string>
    <string name="textview_text">SeekBarPreference test</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_dialog_message">Radius</string>
    <string name="settings_summary">Current value is $1</string>
    <string name="settings_unit">m</string>
    <string name="settings_title">Set the radius of fences</string>

    <!-- Strings für Toast-Texte -->
    <string name="toast_activate_gps">Please activate GPS!</string>
    <string name="googleapi_connection_failed">Connection to Google Play Services failed!</string>
    <string name="googleapi_connection_suspended">Connection to Google Play Services suspended!</string>
</resources>
