<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="example_switch"
        android:title="@string/pref_title_social_recommendations"
        android:summary="@string/pref_description_social_recommendations"
        android:defaultValue="true" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="example_text"
        android:title="@string/pref_title_display_name"
        android:defaultValue="@string/pref_default_display_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="example_list"
        android:title="@string/pref_title_add_friends_to_messages"
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <com.example.andreas.securebiker.Fragments.SeekBarPreference
        android:background="@color/colorPrimary"
        android:defaultValue="50"
        android:dialogMessage="@string/settings_dialog_message"
        android:indeterminate="false"
        android:key="SEEKBAR_VALUE"
        android:max="200"
        android:padding="20dp"
        android:progress="@dimen/activity_settings_seekbar_progress"
        android:summary="@string/settings_summary"
        android:text="@string/settings_unit"
        android:title="@string/settings_title" />

    <ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_sync_summary"
        android:title="@string/pref_title_sync_frequency" />

    <PreferenceCategory
        android:title="@string/pref_title_message_notifications">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:key="notifications_new_message"
        android:title="@string/pref_title_message_notifications"
        android:defaultValue="true" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:title="@string/pref_title_ringtone"
        android:ringtoneType="notification"
        android:defaultValue="content://settings/system/notification_sound" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate"
        android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>