<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.andreas.securebiker.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.andreas.securebiker.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.andreas.securebiker.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:summary="@string/pref_sync_summary"
        android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="com.example.andreas.securebiker.Fragments.SliderFragment"
        android:icon="@drawable/ic_cast_dark"
        android:summary="@string/pref_geofence_summary"
        android:title="@string/pref_header_geofences" />

</preference-headers>
